--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/rtc-io/rtc-plugin-nicta-ios",
   "devDependencies": {
     "cog": "^0.5.3",
-    "rtc-media": "^1"
+    "crel": "^1.1.2",
+    "fdom": "^0.8.0",
+    "rtc-media": "^1.6.3",
+    "rtc-quickconnect": "^1.0.3"
   }
 }
