Added tape for testing

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fdom": "^0.8.0",
     "freeice": "^0.2.2",
     "rtc-media": "^1.6.3",
-    "rtc-quickconnect": "^1.0.3"
+    "rtc-quickconnect": "^1.0.3",
+    "tape": "^2.13.2"
   }
 }
