--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "An iOS integration plugin for getting WebRTC working on an iOS device using webkit",
   "main": "index.js",
   "scripts": {
+    "browserify": "mkdir -p dist && browserify index.js -s RTC.IOS --debug | exorcist dist/rtc-ios.js.map > dist/rtc-ios.js",
+    "uglify": "uglifyjs --screw-ie8 --mangle --compress --in-source-map dist/rtc-ios.js.map --source-map-include-sources --source-map dist/rtc-ios.min.js.map --source-map-url rtc.min.js.map --output dist/rtc-ios.min.js dist/rtc-ios.js",
+    "build": "npm run browserify && npm run uglify",
+    "prepublish": "npm dedupe && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "gendocs": "gendocs > README.md"
   },
@@ -24,13 +28,16 @@
   },
   "homepage": "https://github.com/rtc-io/rtc-plugin-nicta-ios",
   "devDependencies": {
+    "browserify": "^6.1.0",
     "cog": "^1.0.0",
     "crel": "^1.1.2",
+    "exorcist": "^0.1.6",
     "fdom": "^0.8.0",
     "freeice": "^1.0.0",
     "rtc-media": "^1.6.3",
     "rtc-quickconnect": "^2.6.0",
-    "tape": "^2.13.2"
+    "tape": "^2.13.2",
+    "uglify-js": "^2.4.15"
   },
   "dependencies": {
     "rtc-proxy": "^1.1.0"
