--- a/package.json
+++ b/package.json
@@ -33,14 +33,20 @@
     "cog": "^1.0.0",
     "crel": "^1.1.2",
     "exorcist": "^0.1.6",
-    "fdom": "^0.8.0",
+    "fdom": "^1.2.0",
     "freeice": "^1.0.0",
+    "kgo": "^1.3.0",
+    "perlin": "^1.0.0",
+    "rtc-attach": "^1.3.2",
+    "rtc-capture": "^1.0.2",
+    "rtc-core": "^4.0.0",
     "rtc-media": "^1.6.3",
     "rtc-quickconnect": "^2.6.0",
     "tape": "^2.13.2",
     "uglify-js": "^2.4.15"
   },
   "dependencies": {
+    "objectfit": "^1.2.0",
     "rtc-proxy": "^1.1.0"
   }
 }
